# YQX-Plus

./: Chopin_op10_no3_yqx.mid  Chopin_op10_no3_yqx_save.mid  Chopin_op38_yqx.mid  README.md  bvae.py  compare_flow_models.py  conditioners.py  data_augmentation.py  demo_jasco.py  expressivenote.py  feature_encoders.pkl  features.py  flow.py  flow_JASCO.py  gmm.py  main.py  metrics_results.py  plot.ipynb  pyproject.toml  run_yqx.sh  test_jasco.py  test_yqx.sh  xgboost_model.py  yqx.py  yqx_model.pkl
PerformanceMOS_Aria/: PerformanceMOS README.md  pyproject.toml
PerformanceMOS_Aria/YQX_result/baseline-Dexter/: Chopin_op10_no3_expressive.mid  Chopin_op38_expressive.mid  Mozart_K331_1st-mov_expressive.mid  Schubert_D783_no15_expressive.mid
PerformanceMOS_Aria/YQX_result/baseline-virtuosoNet/: Schubert_D783_no15_by_isgn_z0.mid  chopin_op10_no3_by_isgn_z0.mid  chopin_op38_by_isgn_z0.mid  mozart6_k331_1st-mov_by_isgn_z0.mid
PerformanceMOS_Aria/aria/: datasets.py  model.py  utils.py
PerformanceMOS_Aria/aria/eval/m3/: config.py  (+1 more)
PerformanceMOS_Aria/aria/training/: regression_finetune.py
PerformanceMOS_Aria/config/models/: medium-regression.json
PerformanceMOS_Aria/end-to-end-regression/: train.py
PerformanceMOS_Aria/eval/: eval.bat  eval.py
artifacts/: avg_tempos.npy  yqx_model.pkl  yqx_model.pkl.encoders
ckpts/: gmm_nc64.pkl  yqx_flow_model.pkl.encoders  yqx_model.pkl  yqx_model.pkl.encoders
config/: default.yml
outputs/: Chopin_op10_no3_yqx.mid
outputs/bvae_ld64_hd[256, 128]_b4.0_g10.0/: experiment_summary.json
outputs/gmm_nc64/: experiment_summary.json
(+4124 files in other folders)
