[project]
name = "yqx-python"
version = "0.1.0"
description = "YQX Expressive Music Performance System with β-VAE, JASCO Flow, and GMM models"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    # Core ML/DL libraries
    "torch>=2.1.0",
    "torchdiffeq>=0.2.3",
    
    # Scientific computing
    "numpy>=1.21.0,<2.0.0",  # Keep numpy 1.x for better compatibility
    "pandas>=1.3.0", 
    "scikit-learn>=1.0.0",
    "matplotlib>=3.5.0",
    
    # Configuration management
    "omegaconf>=2.3.0",
    
    # MIDI/music processing
    "partitura>=1.4.0",
    "mido>=1.3.0",
    
    # CLI and utilities
    "click>=8.0.0",
    "tqdm>=4.64.0",
    
    # ML/DL utilities
    "wandb>=0.13.0",
    "torchinfo>=1.7.0",
    "torchcfm>=1.0.0",
    
    # Development and testing
    "pytest>=7.0.0",
    "jupyter>=1.0.0",
    
    # Build dependencies
    "setuptools>=50.0.0",
    "wheel>=0.36.0",
    "Cython>=0.29.0",
]

[project.optional-dependencies]
# AudioCraft support (Linux/Windows with GPU recommended)
audiocraft = [
    "audiocraft @ git+https://github.com/facebookresearch/audiocraft.git",
]

# Full development setup
dev = [
    "audiocraft @ git+https://github.com/facebookresearch/audiocraft.git",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.910",
]

